# react-iframe-editor

./: .gitignore  README.md
agents/: .env_example  Dockerfile
backend/: main.py  requirements.txt  schema.py  server.js
figma2react/: Dockerfile  pyproject.toml  test.db
figma2react/app/: main.py
figma2react/app/core/: config.py  security.py
figma2react/app/core/ai/: llm.py
figma2react/app/core/cache/: key_cache.py
figma2react/app/core/db/: database_transaction.py
figma2react/app/core/exception/: error_codes.py
figma2react/app/figma2code/chat/controller/: chat_controller.py
figma2react/app/figma2code/chat/controller/dto/: chat_dto.py
figma2react/app/figma2code/chat/domain/: chat.py  chat_message.py
figma2react/app/figma2code/chat/repository/: chat_message_repository.py  chat_message_repository_abc.py  chat_repository.py  chat_repository_abc.py
figma2react/app/figma2code/chat/service/: chat_service.py  chat_service_abc.py
figma2react/app/figma2code/chat/service/figma2html/: batch_processor.py  html_generator.py  json_node_converter.py  main.py  style_builder.py  svg_renderer.py
figma2react/app/figma2code/chat/service/figma2react/: llm_service.py  main.py  page_generator.py  react_generator.py
figma2react/app/figma2code/user/domain/: user.py
figma2react/app/figma2code/web/: router.py
figma2react/tests/: conftest.py
figma2react/tests/chat/controller/: test_chat_controller.py
figma2react/tests/chat/service/: test_chat_transaction.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+118 files in other folders)
